[gd_scene load_steps=14 format=2]

[ext_resource path="res://Ship/Ship.gd" type="Script" id=1]
[ext_resource path="res://Ship/Controller.gd" type="Script" id=2]
[ext_resource path="res://LineRenderer/LineRenderer.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="PrismMesh" id=2]

[sub_resource type="CubeMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
flags_unshaded = true
flags_do_not_receive_shadows = true
albedo_color = Color( 0.345098, 0.972549, 0.996078, 1 )

[sub_resource type="PrismMesh" id=5]

[sub_resource type="CylinderMesh" id=6]

[sub_resource type="SphereMesh" id=7]

[sub_resource type="BoxShape" id=8]

[sub_resource type="SpatialMaterial" id=10]
emission_enabled = true
emission = Color( 1, 1, 1, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="CapsuleShape" id=9]

[node name="Ship" type="RigidBody" groups=[
"player",
]]
can_sleep = false
axis_lock_linear_y = true
axis_lock_angular_x = true
axis_lock_angular_z = true
script = ExtResource( 1 )
beam_anchor_path = NodePath("Body/Beam/Target")

[node name="Controller" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Body" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = null

[node name="Rocket" type="MeshInstance" parent="Body"]
transform = Transform( 0.647472, 0, 0, 0, -0.0229317, 0.376847, 0, -0.687144, -0.0125763, 0, 1.40102, -0.144209 )
mesh = SubResource( 2 )
material/0 = null

[node name="RocketLight" type="MeshInstance" parent="Body/Rocket"]
transform = Transform( 0.580474, 0, 0, 0, 0.466581, -0.051387, 0, -0.0245878, 0.917361, 0, -0.664935, -0.036046 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="OmniLight" type="SpotLight" parent="Body/Rocket/RocketLight"]
transform = Transform( 1.55537, 0, 0, 0, 0.199967, 2.35126, 0, -2.91534, -0.0350085, 0, -0.310326, 0.108257 )
light_color = Color( 0.176471, 0.768627, 0.976471, 1 )
light_energy = 2.62
light_indirect_energy = 4.07
spot_range = 3.6
spot_attenuation = 0.87055
spot_angle = 65.8
spot_angle_attenuation = 1.46408

[node name="Wing" type="MeshInstance" parent="Body"]
transform = Transform( 2.27091, 1.00809e-07, 0, 1.8659e-14, -1.08377e-07, 0.41843, 1.82565e-07, -1.0604, -7.82245e-09, 0, -0.0584815, 0.423315 )
mesh = SubResource( 5 )
material/0 = null

[node name="Rocket" type="MeshInstance" parent="Body/Wing"]
transform = Transform( 0.0775173, -7.58208e-09, 8.10834e-17, -2.94061e-08, 0.248317, -1.82656e-09, 1.10414e-14, -6.41322e-08, 0.495923, -0.80535, -0.940049, 0.0318564 )
mesh = SubResource( 6 )
material/0 = null

[node name="RocketLight" type="MeshInstance" parent="Body/Wing/Rocket"]
transform = Transform( 0.992987, -3.55271e-15, 0, 0, 0.70746, -0.0240965, 3.38813e-21, -0.0115298, 0.91884, 0, -0.49394, -0.0267763 )
mesh = SubResource( 7 )
material/0 = SubResource( 4 )

[node name="OmniLight" type="SpotLight" parent="Body/Wing/Rocket/RocketLight"]
transform = Transform( 1.55537, 0, 0, 0, 0.199967, 2.35126, 0, -2.91534, -0.0350085, 0, -0.310326, 0.108257 )
light_color = Color( 0.176471, 0.768627, 0.976471, 1 )
light_energy = 2.62
light_indirect_energy = 4.07
spot_range = 3.6
spot_attenuation = 0.87055
spot_angle = 65.8
spot_angle_attenuation = 1.46408

[node name="Rocket2" type="MeshInstance" parent="Body/Wing"]
transform = Transform( 0.0775173, -7.58208e-09, 8.10833e-17, -2.94061e-08, 0.248317, -1.82656e-09, 1.10414e-14, -6.41322e-08, 0.495923, 0.734203, -0.940048, 0.0318564 )
mesh = SubResource( 6 )
material/0 = null

[node name="RocketLight" type="MeshInstance" parent="Body/Wing/Rocket2"]
transform = Transform( 0.992987, 0, 0, 0, 0.70746, -0.0240965, 0, -0.0115298, 0.91884, 0, -0.49394, -0.0267763 )
mesh = SubResource( 7 )
material/0 = SubResource( 4 )

[node name="OmniLight" type="SpotLight" parent="Body/Wing/Rocket2/RocketLight"]
transform = Transform( 1.55537, 0, 0, 0, 0.199967, 2.35126, 0, -2.91534, -0.0350085, 0, -0.310326, 0.108257 )
light_color = Color( 0.176471, 0.768627, 0.976471, 1 )
light_energy = 2.62
light_indirect_energy = 4.07
spot_range = 3.6
spot_attenuation = 0.87055
spot_angle = 65.8
spot_angle_attenuation = 1.46408

[node name="Beam" type="Spatial" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.33507 )

[node name="Target" type="Spatial" parent="Body/Beam"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 8.2869 )

[node name="BeamArea" type="Area" parent="Body/Beam"]
transform = Transform( 2.52268, 0, 0, 0, 1, 0, 0, 0, 3.41757, 0, 0, 2.16285 )
collision_layer = 4

[node name="CollisionShape" type="CollisionShape" parent="Body/Beam/BeamArea"]
transform = Transform( 0.550785, 0, 0, 0, 0.269816, 0, 0, 0, 1.41402, 0, 0, 0.693903 )
shape = SubResource( 8 )

[node name="LineRenderer" parent="Body" instance=ExtResource( 3 )]
material_override = SubResource( 10 )
endThickness = 0.4

[node name="CollisionShape" type="CollisionShape" parent="."]
visible = false
shape = SubResource( 9 )

[node name="CameraAnchor" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.86587, 6.83124 )

[connection signal="body_entered" from="Body/Beam/BeamArea" to="." method="_on_BeamArea_body_entered"]
